--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Друзяшкам приглашение</title>
 
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=<ваш API-ключ>&lang=ru_RU" type="text/javascript">
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=<f84b8be6-4802-4626-a3e4-49df653656b3>&lang=ru_RU"
+          type="text/javascript"></script>
   <script src="scripts/map.js" type="text/javascript"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
